--- a/AppMVC/Views/Shared/_Layout.cshtml
+++ b/AppMVC/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Category" asp-action="Index">Categorías</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Productos</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -70,6 +73,19 @@
             Toast.fire({
                 icon: type,
                 title: message
+            });
+        }
+
+        function alertDelete() {
+            return Swal.fire({
+                title: '¿Confirmar Eliminacion?',
+                text: "No podrás revertir esto.!",
+                icon: 'question',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                cancelButtonText: 'Cancelar',
+                confirmButtonText: 'Si, Eliminar!',
             });
         }
     </script>
