--- a/AppMVC/Views/Category/Index.cshtml
+++ b/AppMVC/Views/Category/Index.cshtml
@@ -53,7 +53,7 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
+                <button type="button" class="btn btn-danger" data-bs-dismiss="modal" onclick="clearForm()">Cerrar</button>
                 <button type="button" class="btn btn-primary" onclick="saveCategory()">Guardar</button>
             </div>
         </div>
@@ -171,9 +171,11 @@
                     $('#modalCategory').modal('hide');
                     getAllCategory();
                     clearForm();
+                    toastMessage('success', 'Categoría creada');
                 },
                 error: function (error) {
                     console.error(error);
+                    alertError('Ha ocurrido un error, por favor vuelva a intentarlo');
                 }
             });
         }
@@ -189,9 +191,11 @@
                     $('#modalCategory').modal('hide');
                     getAllCategory();
                     clearForm();
+                    toastMessage('success', 'Categoría actualizada');
                 },
                 error: function (error) {
                     console.error(error);
+                    alertError('Ha ocurrido un error, por favor vuelva a intentarlo');
                 }
             });
         }
@@ -208,10 +212,11 @@
 
                     listCategory = listCategory.filter(x => x.idCategory != idCategory);
                     loadTable(listCategory);
-                    //getAllCategory();
+                    toastMessage('success', 'Categoría eliminada');
                 },
                 error: function (error) {
                     console.error(error);
+                    alertError('Ha ocurrido un error, por favor vuelva a intentarlo');
                 }
             });
         }
