loader y creación de tablas

--- a/AppMVC/Views/Shared/_Layout.cshtml
+++ b/AppMVC/Views/Shared/_Layout.cshtml
@@ -37,6 +37,13 @@
             </div>
         </nav>
     </header>
+
+    <div id="overlay" class="overlay">
+        <div class="loader">
+            <img src="~/images/cargando cuadrado.svg" alt="Loading..." id="loaderImage">
+            <p>Cargando...</p>
+        </div>
+    </div>
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
@@ -121,6 +128,15 @@
                 confirmButtonText: 'Aceptar!',
             });
         }
+
+        // Mostrar el loader durante las solicitudes AJAX
+        $(document).ajaxStart(function () {
+            $("#overlay").css("display", "flex");
+        });
+
+        $(document).ajaxStop(function () {
+            $("#overlay").hide();
+        });
     </script>
 </body>
 </html>
