--- a/AppMVC/Views/Category/Index.cshtml
+++ b/AppMVC/Views/Category/Index.cshtml
@@ -11,6 +11,7 @@
 
     <div class="col-md-6">
         <button type="button" class="btn btn-primary float-end" onclick="openModal(true)">
+            <i class="fa-sharp fa-solid fa-plus"></i>
             Nueva categoría
         </button>
     </div>
