--- a/AppMVC/Views/Product/Index.cshtml
+++ b/AppMVC/Views/Product/Index.cshtml
@@ -4,7 +4,13 @@
 @{
 }
 
-
+<style>
+    .gallery img{
+        
+        width:150px;
+        margin:10px;
+    }
+</style>
 
 <div class="row">
     <div class="col-md-6">
@@ -60,7 +66,7 @@
                         </div>
                         <div class="col-md-6">
                             <label class="col-form-label">Nombre</label>
-                            <input type="text" class="form-control" id="txtName" placeholder="Categoría" />
+                            <input type="text" class="form-control" id="txtName" placeholder="Nombre" />
                         </div>
 
                     </div>
@@ -76,11 +82,50 @@
                         </div>
 
                     </div>
+
+                    <div class="row">
+
+                        <div class="col-md-12">
+                            <label class="col-form-label">Imagenes</label>
+
+                            <div class="input-group">
+                                <input type="file"
+                                       class="form-control"
+                                       id="fileImage"
+                                       multiple accept="image/*">
+                                <div class="input-group-append">
+                                    <button id="btnSaveImage" class="btn btn-info" type="button" onclick="addImage()">
+
+                                        <i class="fa fa-save"></i>
+                                    </button>
+                                </div>
+                            </div>
+
+
+                        </div>
+                    </div>
+
+
+                    <div class="row mt-2" id="idGallery">
+                        <h4>Galería</h4>
+                        <div class="gallery" ></div>
+                    </div>
+
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-bs-dismiss="modal" onclick="clearForm()">Cerrar</button>
-                <button type="button" class="btn btn-primary" onclick="saveProduct()">Guardar</button>
+                <button type="button"
+                        class="btn btn-danger"
+                        data-bs-dismiss="modal"
+                        onclick="clearForm()">
+                    <i class="fas fa-cancel mx-1"> </i> Cerrar
+                </button>
+                <button type="button"
+                        class="btn btn-primary"
+                        onclick="saveProduct()">
+                    <i class="fas fa-save mx-1"> </i>
+                    Guardar
+                </button>
             </div>
         </div>
     </div>
@@ -95,9 +140,6 @@
         idCategory = 0;
         idProduct = 0;
         $(document).ready(function () {
-
-            console.log('Hola mundo, desde productos');
-
             getAllProducts();
             getAllCategory();
 
@@ -148,9 +190,9 @@
                         render: function (data) {
                             const id = data.idProduct;
                             return `
-                                                <button  class="btn btn-warning" onclick = "editProduct(`+ id + `)" > <i class="fas fa-edit" > </i> Editar</button >
-                                                <button class="btn btn-danger" onclick = "deleteProduct(`+ id + `)" > <i class="far fa-trash-alt" > </i> Eliminar</button >
-                                                `;
+                                <button  class="btn btn-warning" onclick = "editProduct(`+ id + `)" > <i class="fas fa-edit" > </i> Editar</button >
+                                <button class="btn btn-danger" onclick = "deleteProduct(`+ id + `)" > <i class="far fa-trash-alt" > </i> Eliminar</button >
+                                `;
                         }
                     }
                 ]
@@ -212,8 +254,12 @@
 
         function openModal(isInsert) {
             if (isInsert) {
+                $('#btnSaveImage').attr('hidden', true);
+                $('#idGallery').attr('hidden', true);
                 $('#idTitleModal').html('Crear producto');
             } else {
+                $('#btnSaveImage').attr('hidden', false);
+                $('#idGallery').attr('hidden', false);
                 $('#idTitleModal').html('Editar producto');
             }
 
@@ -232,7 +278,14 @@
             idCategory = product.idCategory;
             loadCmbCategory(listCategory, product.idCategory);
             idProduct = id;
-            console.log(product);
+            
+            var gallery = $(".gallery");
+            gallery.empty();
+            product.urlImages.forEach(function (img) {
+                var imgElement = $('<img>').attr('src', img).attr('alt', img);
+                gallery.append(imgElement);
+
+            });
 
 
             openModal(false);
@@ -247,24 +300,88 @@
             });
         }
 
+        function getImagesByProduct(idProduct) {          
+            $.ajax({
+                url: '@Url.Action("GetImagesByProduct", "Product")',
+                method: 'GET',
+                data:{
+                    idProduct: idProduct
+                },
+                dataType: 'json',
+                success: function (result) {
+                    var gallery = $(".gallery");
+                    gallery.empty();
+                    result.forEach(function (img) {
+                        var imgElement = $('<img>').attr('src', img.urlImage).attr('alt', img.urlImage);
+                        gallery.append(imgElement);
+
+                    });
+                },
+                error: function (error) {
+                    console.error(error);
+                    alertError('Ha ocurrido un error, por favor vuelva a intentarlo');
+                }
+            });
+
+            getAllProducts();
+        }
+
+        function addImage() {
+            var formData = new FormData();
+            formData.append("idProduct", idProduct);
+            var files = document.getElementById("fileImage").files;
+
+            if (files.length > 0) {
+                for (var i = 0; i < files.length; i++) {
+                    formData.append("images", files[i]);
+                }
+            } else {
+                toastMessage('warning', 'Es obligatorio seleccionar imagenes');
+                $("#fileImage").focus();
+                return;
+            }
+
+            $.ajax({
+                url: '@Url.Action("AddImages", "Product")',
+                method: 'POST',
+                data: formData,
+                dataType: 'json',
+                contentType: false, // No establecer el encabezado Content-Type
+                processData: false, // No procesar los datos
+                success: function (result) {
+
+                    toastMessage('success', 'Imagenes cargadas');
+                    getImagesByProduct(idProduct);
+
+                },
+                error: function (error) {
+                    console.error(error);
+                    alertError('Ha ocurrido un error, por favor vuelva a intentarlo');
+                }
+            });
+        }
+
         function saveProduct() {
             if (validateForm()) {
                 const name = $('#txtName').val();
                 const amount = $('#txtAmount').val();
                 const price = limpiarValor($('#txtPrice').val());
-                const parameter = {
-                    'name': name,
-                    'amount': amount,
-                    'price': price,
-                    'idCategory': idCategory,
-                    'idProduct': idProduct
-                };
 
-                console.log('parametros: ', parameter);
+                var formData = new FormData();
+                formData.append("name", name);
+                formData.append("amount", amount);
+                formData.append("price", price);
+                formData.append("idCategory", idCategory);
+                formData.append("idProduct", idProduct);
+
                 if (idProduct != 0) {
-                    updateProduct(parameter);
+                    updateProduct(formData);
                 } else {
-                    addProduct(parameter);
+                    var files = document.getElementById("fileImage").files;
+                    for (var i = 0; i < files.length; i++) {
+                        formData.append("images", files[i]);
+                    }
+                    addProduct(formData);
                 }
             }
 
@@ -277,6 +394,8 @@
                 method: 'POST',
                 data: parameter,
                 dataType: 'json',
+                contentType: false, // No establecer el encabezado Content-Type
+                processData: false, // No procesar los datos
                 success: function (result) {
 
                     $('#modalProduct').modal('hide');
@@ -297,6 +416,8 @@
                 method: 'PUT',
                 data: parameter,
                 dataType: 'json',
+                contentType: false, // No establecer el encabezado Content-Type
+                processData: false, // No procesar los datos
                 success: function (result) {
 
                     $('#modalProduct').modal('hide');
@@ -366,6 +487,7 @@
             $('#txtName').val('');
             $('#txtAmount').val('');
             $('#txtPrice').val('');
+            $("#fileImage").val('');
             idCategory = 0;
             idProduct = 0;
             loadCmbCategory(listCategory);
